Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25693

SST failed due to incorrect connection address

    XMLWordPrintable

Details

    Description

      Authentication information is not removed from the connection address, which leads to failure in a number of tests:

      2021-05-15 13:35:29 0 [Note] WSREP: Running: 'wsrep_sst_mariabackup --role 'donor' --address 'client:xxxxxxxxxxxxxxxxxxxxxxx@127.0.0.2:16007/xtrabackup_sst//1' --local-port '16000' --socket '/dev/shm/var/tmp/mysqld.1.sock' --datadir '/dev/shm/var/mysqld.1/data/' --defaults-file '/dev/shm/var/my.cnf' --defaults-group-suffix '.1' --gtid 'efe06120-b5a3-11eb-80e1-36bfbd054e43:2' --gtid-domain-id '0' --binlog-index 'mysqld-bin.index' --mysqld-args --defaults-group-suffix=.1 --defaults-file=/dev/shm/var/my.cnf --log-output=file --innodb --innodb-cmpmem --innodb-cmp-per-index --innodb-trx --innodb-locks --innodb-lock-waits --innodb-metrics --innodb-buffer-pool-stats --innodb-buffer-page --innodb-buffer-page-lru --innodb-sys-columns --innodb-sys-fields --innodb-sys-foreign --innodb-sys-foreign-cols --innodb-sys-indexes --innodb-sys-tables --innodb-sys-virtual --core-file --loose-debug-sync-timeout=300'
      2021-05-15 13:35:29 1 [Note] WSREP: sst_donor_thread signaled with 0
      WSREP_SST: [INFO] SSL configuration: CA='/usr/share/mysql/mysql-test/std_data/cacert.pem', CERT='/usr/share/mysql/mysql-test/std_data/client-cert.pem', KEY='/usr/share/mysql/mysql-test/std_data/client-key.pem', MODE='VERIFY_CA', encrypt=3 (20210515 13:35:29.196)
      WSREP_SST: [INFO] Streaming with mbstream (20210515 13:35:29.286)
      WSREP_SST: [INFO] Using socat as streamer (20210515 13:35:29.288)
      WSREP_SST: [INFO] Using openssl based encryption with socat: with key and crt (20210515 13:35:29.292)
      WSREP_SST: [INFO] Encrypting with cert=/usr/share/mysql/mysql-test/std_data/client-cert.pem, key=/usr/share/mysql/mysql-test/std_data/client-key.pem, cafile=/usr/share/mysql/mysql-test/std_data/cacert.pem (20210515 13:35:29.294)
      WSREP_SST: [INFO] Using /tmp/tmp.DRN1AYBbTr as mariabackup temporary directory (20210515 13:35:29.310)
      WSREP_SST: [INFO] Streaming GTID file before SST (20210515 13:35:29.312)
      WSREP_SST: [INFO] Evaluating mbstream -c 'xtrabackup_galera_info' | socat -u stdio openssl-connect:client:xxxxxxxxxxxxxxxxxxxxxx@127.0.0.2:16007,cert='/usr/share/mysql/mysql-test/std_data/client-cert.pem',key='/usr/share/mysql/mysql-test/std_data/client-key.pem',cafile='/usr/share/mysql/mysql-test/std_data/cacert.pem',commonname='client'; RC=( ${PIPESTATUS[@]} ) (20210515 13:35:29.314)
      2021/05/15 13:35:29 socat[7277] E openssl-connect: 2 parameters required
      WSREP_SST: [ERROR] Error while sending data to joiner node:  exit codes: 141 1 (20210515 13:35:29.319)
      WSREP_SST: [ERROR] Cleanup after exit with status:32 (20210515 13:35:29.321)
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            sysprg Julius Goryavsky (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d 3h
                1d 3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.